objects/NGCC_Rule_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Countries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Countries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Theater__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BRITISH INDIAN OCEAN TERRITORY</fullName>
                </value>
                <value>
                    <fullName>BRUNEI DARUSSALAM</fullName>
                </value>
                <value>
                    <fullName>CAMBODIA</fullName>
                </value>
                <value>
                    <fullName>CHRISTMAS ISLAND</fullName>
                </value>
                <value>
                    <fullName>COCOS (KEELING) ISLANDS</fullName>
                </value>
                <value>
                    <fullName>COOK ISLANDS</fullName>
                </value>
                <value>
                    <fullName>FIJI</fullName>
                </value>
                <value>
                    <fullName>FRENCH POLYNESIA</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>INDONESIA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>KIRIBATI</fullName>
                </value>
                <value>
                    <fullName>KOREA, REPUBLIC OF</fullName>
                </value>
                <value>
                    <fullName>KOREA,DEMOCRATIC PEOPLE'S REPUBLIC OF</fullName>
                </value>
                <value>
                    <fullName>LAO PEOPLE'S DEMOCRATIC REPUBLIC</fullName>
                </value>
                <value>
                    <fullName>MALAYSIA</fullName>
                </value>
                <value>
                    <fullName>MALDIVES</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MICRONESIA, FEDERATED STATES OF</fullName>
                </value>
                <value>
                    <fullName>MYANMAR</fullName>
                </value>
                <value>
                    <fullName>NAURU</fullName>
                </value>
                <value>
                    <fullName>NEPAL</fullName>
                </value>
                <value>
                    <fullName>NEW CALEDONIA</fullName>
                </value>
                <value>
                    <fullName>NEW ZEALAND</fullName>
                </value>
                <value>
                    <fullName>NIUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Attribute_Label__c</fullName>
        <label>Lead Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Attribute__c</fullName>
        <label>Lead Attribute API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODS_Leads__c</fullName>
        <label>MODS / Leads</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MODS Q/A</fullName>
                </value>
                <value>
                    <fullName>Lead Attribute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MODS_Q_A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MODS Q/A</label>
        <referenceTo>CC_Master_Question_Answer_Bank__c</referenceTo>
        <relationshipName>NGCC_Rule_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-High</fullName>
                </value>
                <value>
                    <fullName>2-Medium</fullName>
                </value>
                <value>
                    <fullName>3-Low</fullName>
                </value>
                <value>
                    <fullName>4-N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <label>Theater</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>CC Lead Priority Rule</label>
    <nameField>
        <displayFormat>NGCC Rule-{000000}</displayFormat>
        <label>NGCC Rule Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Lead Priority Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Theater__c</columns>
        <columns>Countries__c</columns>
        <columns>Rank__c</columns>
        <columns>MODS_Leads__c</columns>
        <columns>MODS_Q_A__c</columns>
        <columns>Lead_Attribute_Label__c</columns>
        <columns>Value__c</columns>
        <columns>Priority__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>LEADS1</fullName>
        <active>false</active>
        <label>LEADS1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leads</fullName>
        <active>true</active>
        <description>Choose "Leads" for Lead rules</description>
        <label>Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>MODS</fullName>
        <active>false</active>
        <description>Choose "MODS" for MODS rules</description>
        <label>MODS</label>
    </recordTypes>
</CustomObject>